  - [oar_resources_init] fix node read from standard input
  - [oarstat] prettier print of job events
  - [logs] several cosmetic fixes 
  - [api] add colmet extraction function
  - [api] proposed apache configuration now uses a virtual host on port 6668
  - [drawgantt-svg] fix the possibly very long delay when zooming
  - [drawgantt-svg] add forecast buttons + relative start/stop url arguments
  - [monika] fix harmless bug in configuration 
  - [visualization] remove overlib.js (license issue), this breaks the legacy
         drawgantt (which is not supported anymore)

version 2.5.5:
--------------

  - [iolib] fix deadlock with TRUNCATE in postgresql
  - [almighty] add SCHEDULER_MIN_TIME_BETWEEN_2_CALLS:
        the scheduler is launched at max every t seconds (t=5 by default), this
        avoids the scheduler to cause starvation with regard to the other 
        modules
  - [scheduler] fix some memory leaks.
  - [scheduler] add a cache to the resources tree computation: improve
        the scheduler speed by reducing the number of SQL queries.
  - [scheduler] backport the expire/postpone/deadline job types.
  - [scheduler] rename the placeholder job types: placeholder/allowed.
  - [scheduler] fix timesharing (adv reservation and *_placeholder schedulers).
  - [scheduler] allows noop/cosystem/deploy jobs to start on resources in
        standby, no wake-up is triggered (requires activating energy saving).
  - [oarsub] use jobkey (-k) if the OAR_JOB_KEY_FILE env variable is set.
  - [oarstat] fix accounting display
  - [oar_resources_init] fix HyperThreading bug + improve CLI
  - [oar_resources_add] make HyperThreading optional + fix long options + make
        nicer warning outputs for auto-offset
  - [admission rules] rewrite the job type check rule
  - [admission rules] fix oaradmissionrules bug with MySQL when modifying a rule
  - [oar-node] fix pid in init script.
  - [api] some optimizations + rework authentication configuration (apache).