@@ -21,6 +21,7 @@ version 2.5.6:
   - [api] proposed apache configuration now uses a virtual host on port 6668
   - [drawgantt-svg] fix the possibly very long delay when zooming
   - [drawgantt-svg] add forecast buttons + relative start/stop url arguments
+  - [monika] fix bugs with recent Perl/Perl CGI versions
   - [monika] fix harmless bug in configuration 
   - [visualization] remove overlib.js (license issue), this breaks the legacy
          drawgantt (which is not supported anymore)
